force-app/main/default/objects/Proposal__c/fields/MarginPercent__c.field-meta.xml
<CustomField>
    <fullName>MarginPercent__c</fullName>
    <formula>(TotalAmount__c - TotalCost__c) / TotalAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>